complete the project of random jokes

--- a/SCSS/_mixin.scss
+++ b/SCSS/_mixin.scss
@@ -1,6 +1,6 @@
 @mixin flexBox($col){
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-direction: $col;
 }
