--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 html{
     font-size: 62.5%;
@@ -21,6 +22,15 @@ html{
         background: #e5e2ec;
         h1 {
             font-size: 5rem;
+            margin-top: 3rem;
+        }
+        #joke {
+            font-size: 2.5rem;
+            color: #2a004d;
+            font-weight: 500;
+            text-transform: inherit;
+            padding: 0 25rem;
+            text-align: center;
         }
     }
 }
@@ -38,6 +48,7 @@ html{
 	}
 }
 .cta {
+    margin-bottom: 15rem;
 	display: flex;
 	padding: 11px 33px;
 	text-decoration: none;
